crates/toml/tests/snapshots/invalid/table/overwrite-with-deep-table.stderr
TOML parse error at line 2, column 2
  |
2 | [a.b.c.d]
  |  ^
cannot extend value of type integer with a dotted key

---
TOML parse error at line 2, column 2
  |
2 | [a.b.c.d]
  |  ^
cannot extend value of type integer with a dotted key
